--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: "Clas-Grotesk";
+    src: url("/fonts//ClashGrotesk-Variable.ttf") format("truetype");
+  }
+}
